--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Furniro</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index-rpsv.css">
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +20,7 @@
 <body>
 
     <!-- header section -->
-     <header class="header-area">
+    <header class="header-area container">
         <div class="header-container">
 
             <div class="header-icon">
@@ -32,10 +33,10 @@
             </div>
             <div class="header-menu">
                 <ul class="menu-item">
-                    <li><a href="#"></a>Home</li>
-                    <li><a href="#"></a>Shop</li>
-                    <li><a href="#"></a>About</li>
-                    <li><a href="#"></a>Contact</li>
+                    <li><a href="index.html" target="_blank">Home</a></li>
+                    <li><a href="shop.html" target="_blank">Shop</a></li>
+                    <li><a href="#" target="_blank">About</a></li>
+                    <li><a href="#" target="_blank">Contact</a></li>
                 </ul>
             </div>
             <div class="header-search">
@@ -54,7 +55,7 @@
 
 
     <!-- hero section -->
-     <section class="hero-area">
+     <section class="hero-area container">
         <div class="hero">
             <img src="./image/Mask Group.jpg" alt="">
         </div>
@@ -64,12 +65,12 @@
 
 
     <!-- cetagory -->
-     <section class="cetagory-area">
-        <div class="cetagory-heading container">
+     <section class="cetagory-area container">
+        <div class="cetagory-heading">
             <h3>Browse The Range</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
-        <div class="cetagory container">
+        <div class="cetagory sub-container">
             <div class="cetagory-card">
                 <img src="./image/Mask Group.png" alt="">
                 <h5>Dining</h5>
@@ -89,11 +90,11 @@
 
 
     <!-- product section -->
-     <section class="product-area">
-        <div class="product-heading container">
+     <section class="product-area container">
+        <div class="product-heading">
             <h2>Our Products</h2>
         </div>
-        <div class="product container">
+        <div class="product">
             <div class="product-card">
                 <div class="product-img">
                     <img src="./image/image 1.png" alt="">
@@ -209,8 +210,8 @@
 
 
     <!-- roome area -->
-     <section class="room-area">
-        <div class="room container">
+     <section class="room-area container">
+        <div class="room">
             <div class="room-details">
                 <h3>50+ Beautiful rooms inspiration</h3>
                 <p>Our designer already made a lot of beautiful prototipe of rooms that inspire you</p>
@@ -228,7 +229,7 @@
 
     <!-- photo gallery -->
      <section class="furniture-gallery container">
-        <div class="gallery container">
+        <div class="gallery">
             <p>Share your setup with</p>
             <h1>#FuniroFurniture</h1>
             <div class="grid">
