--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
             <div class="product-card">
                 <div class="product-img">
-                    <img src="./image/images.png" alt="">
+                    <img src="./image/Images.png" alt="">
                 </div>
                 <div class="product-details">
                     <h5>Grifo</h5>
