--- a/checkout.html
+++ b/checkout.html
@@ -37,8 +37,8 @@
                 <ul class="menu-item">
                     <li><a href="index.html" target="_blank">Home</a></li>
                     <li><a href="shop.html" target="_blank">Shop</a></li>
-                    <li><a href="#" target="_blank">About</a></li>
-                    <li><a href="#" target="_blank">Contact</a></li>
+                    <li><a href="singleproduct.html" target="_blank">About</a></li>
+                    <li><a href="contact.html" target="_blank">Contact</a></li>
                 </ul>
             </div>
             <div class="header-search">
