--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -96,6 +98,18 @@
         </div>
         <div class="product">
             <div class="product-card">
+                <div class="overlay">
+                    <div class="overlay-btn">
+                        <button>Add to Cart</button>
+                    </div>
+                    <div class="overlay-action">
+                        <ul class="overlay-item">
+                            <li><i class="fa-solid fa-share-nodes"></i><a href="">Share</a></li>
+                            <li><i class="fa-solid fa-arrow-right-arrow-left"></i><a href="">Compare</a></li>
+                            <li><i class="fa-regular fa-heart"></i><a href="">like</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="product-img">
                     <img src="./image/image 1.png" alt="">
                 </div>
@@ -109,6 +123,18 @@
                 </div>   
             </div>
             <div class="product-card">
+                <div class="overlay">
+                    <div class="overlay-btn">
+                        <button>Add to Cart</button>
+                    </div>
+                    <div class="overlay-action">
+                        <ul class="overlay-item">
+                            <li><i class="fa-solid fa-share-nodes"></i><a href="">Share</a></li>
+                            <li><i class="fa-solid fa-arrow-right-arrow-left"></i><a href="">Compare</a></li>
+                            <li><i class="fa-regular fa-heart"></i><a href="">like</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="product-img">
                     <img src="./image/image 3.png" alt="">
                 </div>
@@ -122,6 +148,18 @@
                 </div>   
             </div>
             <div class="product-card">
+                <div class="overlay">
+                    <div class="overlay-btn">
+                        <button>Add to Cart</button>
+                    </div>
+                    <div class="overlay-action">
+                        <ul class="overlay-item">
+                            <li><i class="fa-solid fa-share-nodes"></i><a href="">Share</a></li>
+                            <li><i class="fa-solid fa-arrow-right-arrow-left"></i><a href="">Compare</a></li>
+                            <li><i class="fa-regular fa-heart"></i><a href="">like</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="product-img">
                     <img src="./image/image 4.png" alt="">
                 </div>
@@ -135,6 +173,18 @@
                 </div>   
             </div>
             <div class="product-card">
+                <div class="overlay">
+                    <div class="overlay-btn">
+                        <button>Add to Cart</button>
+                    </div>
+                    <div class="overlay-action">
+                        <ul class="overlay-item">
+                            <li><i class="fa-solid fa-share-nodes"></i><a href="">Share</a></li>
+                            <li><i class="fa-solid fa-arrow-right-arrow-left"></i><a href="">Compare</a></li>
+                            <li><i class="fa-regular fa-heart"></i><a href="">like</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="product-img">
                     <img src="./image/image 7.png" alt="">
                 </div>
@@ -148,6 +198,18 @@
                 </div>   
             </div>
             <div class="product-card">
+                <div class="overlay">
+                    <div class="overlay-btn">
+                        <button>Add to Cart</button>
+                    </div>
+                    <div class="overlay-action">
+                        <ul class="overlay-item">
+                            <li><i class="fa-solid fa-share-nodes"></i><a href="">Share</a></li>
+                            <li><i class="fa-solid fa-arrow-right-arrow-left"></i><a href="">Compare</a></li>
+                            <li><i class="fa-regular fa-heart"></i><a href="">like</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="product-img">
                     <img src="./image/image 8.png" alt="">
                 </div>
@@ -161,6 +223,18 @@
                 </div>   
             </div>
             <div class="product-card">
+                <div class="overlay">
+                    <div class="overlay-btn">
+                        <button>Add to Cart</button>
+                    </div>
+                    <div class="overlay-action">
+                        <ul class="overlay-item">
+                            <li><i class="fa-solid fa-share-nodes"></i><a href="">Share</a></li>
+                            <li><i class="fa-solid fa-arrow-right-arrow-left"></i><a href="">Compare</a></li>
+                            <li><i class="fa-regular fa-heart"></i><a href="">like</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="product-img">
                     <img src="./image/Images.png" alt="">
                 </div>
@@ -174,6 +248,18 @@
                 </div>   
             </div>
             <div class="product-card">
+                <div class="overlay">
+                    <div class="overlay-btn">
+                        <button>Add to Cart</button>
+                    </div>
+                    <div class="overlay-action">
+                        <ul class="overlay-item">
+                            <li><i class="fa-solid fa-share-nodes"></i><a href="">Share</a></li>
+                            <li><i class="fa-solid fa-arrow-right-arrow-left"></i><a href="">Compare</a></li>
+                            <li><i class="fa-regular fa-heart"></i><a href="">like</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="product-img">
                     <img src="./image/image 6.png" alt="">
                 </div>
@@ -187,6 +273,18 @@
                 </div>   
             </div>
             <div class="product-card">
+                <div class="overlay">
+                    <div class="overlay-btn">
+                        <button>Add to Cart</button>
+                    </div>
+                    <div class="overlay-action">
+                        <ul class="overlay-item">
+                            <li><i class="fa-solid fa-share-nodes"></i><a href="">Share</a></li>
+                            <li><i class="fa-solid fa-arrow-right-arrow-left"></i><a href="">Compare</a></li>
+                            <li><i class="fa-regular fa-heart"></i><a href="">like</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="product-img">
                     <img src="./image/Rectangle 45.png" alt="">
                 </div>
